# tauri-plugin-media

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  build.rs  package-lock.json  package.json
.github/workflows/: audit.yml  clippy.yml  test.yml
examples/tauri-app/: package-lock.json  package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src/components/: Navigation.svelte  Notifications.svelte
examples/tauri-app/src/lib/: stores.js
examples/tauri-app/src/pages/: Events.svelte  GetMethods.svelte  MediaPlayer.svelte  Overview.svelte  SetMethods.svelte  SystemMonitor.svelte
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: clear_metadata.toml  get_playback_info.toml  initialize_session.toml  set_playback_info.toml  set_playback_status.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
