[package]
name = "tauri-plugin-media"
version = "0.1.0"
authors = [ "Taiizor" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-media"

[dependencies]
tauri = { version = "2.8.2" }
serde = "1.0"
thiserror = "2"
serde_json = "1.0"
log = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Foundation",
    "Foundation_Collections", 
    "Media",
    "Media_Control",
    "Media_Playback",
    "Storage_Streams",
    "System",
    "Win32_Foundation",
    "Win32_System_WinRT",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
core-graphics = "0.24"
dispatch = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9"
dbus-crossroads = "0.5"

[build-dependencies]
tauri-plugin = { version = "2.4.0", features = ["build"] }
